# cykingdom

./: .gitignore  Cargo.toml  README.md  schema.sql  wrangler.toml
.github/workflows/: deploy.yml  pull-request-ci.yml
frontend/: app.js  index.html  style.css
src/: api.rs  db.rs  lib.rs
