[package]
name = "cykingdom"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { git = "https://github.com/cloudflare/workers-rs", features = ["d1"] }
kangoufu = { version = "0.1.0", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.22"
ciborium = "0.2"
